[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = { version = "2.7.10", features = ["std"] }
pest_generator = { version = "2.7.10", features = ["grammar-extras"] }
pest_derive = { version = "2.7.10", features = ["grammar-extras"] }
pest_typed = { version = "0.17.1", features = ["std"] }
pest_typed_generator = { version = "0.17.1", features = ["grammar-extras"] }
pest_typed_derive = { version = "0.17.1", features = ["grammar-extras"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105" }
colored = "3.0.0"
